--- a/README.rdoc
+++ b/README.rdoc
@@ -1,7 +1,13 @@
 == Profane Alice
 
-Profane Alice is a tool to gamify good manners in comments and discussions. It encourages good behavior by creating subtly annoying repercussions to bad behavior such as cursing, without overtly censoring comments that contain profane language. Inspired by Alice in Wonderland, the basic idea is to decrease the size of the default comment box to posters who use bad language. 
+Profane Alice is a tool to gamify good manners in comments and discussions. It encourages good behavior by creating subtly annoying repercussions to bad behaviors such as cursing, without overtly censoring comments that contain profane language. Inspired by Alice in Wonderland, the basic idea is to decrease the size of the default comment box to posters who use bad language.
 
-For example, when a user types the word 'shit', the comment box decreases from 100 words to 50 words, and some odd things start to happen. Hard to post, huh? Yeah, better watch your manners. 
+For example, when a user types the word 'shit' or 'fuck', some odd things start to happen to their comment box. Hard to post, huh? Yeah, better watch your manners. The idea is to also decrease a comment's maximum word count from the default 100, to 66, to 33, and so on, as the number of profanities are typed in the box. Tracking a manners score for a user would tell you how much that user is allowed to post. If the user curses enough, his comment box disappears into thin air,
 
 http://stark-wave-3566.herokuapp.com
+
+==Addendum
+
+I have written up a description of my process in answering the challenge. In particular, please read the "What I Learned" section to understand where I started and where I ended up.
+
+http://stark-wave-3566.herokuapp.com/about
